modificaciones de estilos

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ tienda.css.map
 tienda.css
 forma.css
 forma.css.map
+producto.css
+procuto.css.map
+public/styles/producto.css.map
+public/styles/producto.css.map
